--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,24 +1,27 @@
 {
-  "name": "frontend",
+  "name": "front-end",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@popperjs/core": "^2.10.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "lodash": "^4.17.21",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.8",
+    "axios": "^0.21.4",
     "moment": "^2.29.1",
-    "moment-timezone": "^0.5.33",
-    "prop-types": "^15.7.2",
+    "next": "^11.1.2",
+    "next-router": "^1.3.6",
+    "next-server-context": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-popper": "^2.2.5",
+    "react-hook-form": "^7.15.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "rrule": "^2.6.8",
+    "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
